# pike

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
_ext/lcomp/: CMakeLists.txt
_ext/lcomp/src/: LCOMP.sln  Lcomp.def  e154.cpp  e310.cpp  lcomp.rc  lcomp.vcxproj  lcomp.vcxproj.filters  lcomp64.def  ldevbase.cpp  plx.cpp  salayer.cpp
_misc/deploy/: conf.json  inclinometer.tbl
dc/: CMakeLists.txt  DAQ.h  dc.def
dc/dummy/: DummyDaq.cpp  DummyDaq.h
dc/lcard/: CMakeLists.txt  DchwBridge.cpp  DchwBridge.h  LCardDaq.cpp  LCardDaq.h  LCardDaqTest.cpp  LCardDevice.cpp  LCardDevice.h  error_lcard.cpp  error_lcard.hpp
dc/lcard/src/: LCardDevice.cpp
devices/: CMakeLists.txt  Depthometer.h  Ender.h  Inclinometer.h  Mover.h  Odometer.h  Pike.h  Rotator.h  error_devices.cpp  error_devices.hpp
devices/cd22/: CD22.cpp  CD22.h  CMakeLists.txt
devices/ender/: Ender.cpp  Ender.h  EnderImpl.cpp  EnderImpl.h  EnderImplTest.cpp
devices/inclinometer/: Inclinometer.cpp  Inclinometer.h  InclinometerImpl.cpp  InclinometerImpl.h  InclinometerImplTest.cpp  InclinometerImplTransTable.h  InclinometerImplTransTableMapper.cpp  InclinometerImplTransTableMapper.h  InclinometerImplTransTableMapperTest.cpp  InclinometerTransTable.h  InclinometerTransTableMapper.cpp  InclinometerTransTableMapper.h
devices/mover/: Mover.cpp  Mover.h  MoverImpl.cpp  MoverImpl.h
devices/odometer/: Odometer.cpp  Odometer.h  OdometerImpl.cpp  OdometerImpl.h  OdometerImplTest.cpp
devices/pike/: Pike.cpp  Pike.h  PikeImpl.cpp  PikeImpl.h
devices/rotator/: Rotator.cpp  Rotator.h  RotatorImpl.cpp  RotatorImpl.h
logic/: CMakeLists.txt  Conf.h  ConfMapper.cpp  ConfMapper.h  ConfMapperTest.cpp  MovementAndOrientationReader.cpp  MovementAndOrientationReader.h  OngoingReader.cpp  OngoingReader.h  OngoingReaderImpl.cpp  OngoingReaderImpl.h  OngoingReaderImplTest.cpp  Pike.h  PikeImpl.cpp  PikeImpl.h  PikeImplTest.cpp  Remote.h  RemoteImpl.cpp  RemoteImpl.h  RemoteServer.h  RemoteServerImpl.cpp  RemoteServerImpl.h  RemoteServerImplTest.cpp  SliceMsrMapper.h  SliceMsrMapperImpl.cpp  SliceMsrMapperImpl.h  Slicer.cpp  Slicer.h  SlicerImpl.cpp  SlicerImpl.h  SlicerImplTest.cpp  error_logic.cpp  error_logic.hpp
shared/: errors.hpp
ui-modules/: CMakeLists.txt
ui-modules/main/: MainPresenter.h  MainPresenterImpl.cpp  MainPresenterImpl.h  MainView.h
ui-qwidgets/: CMakeLists.txt  main.cpp
ui-qwidgets/_widgets/: CameraWidget.cpp  CameraWidget.h  DistanceWidget.cpp  DistanceWidget.h  InclioWidget.cpp  InclioWidget.h  SliceWidget.cpp  SliceWidget.h
ui-qwidgets/main/: MainViewImpl.cpp  MainViewImpl.h  MainViewImplTest.cpp
